# template

./: .dockerignore  .env.docker  .gitignore  README.md  docker-compose.yml  nginx.conf  supervisor.conf
back/: .dockerignore  .env.example  .gitignore  Dockerfile  ISSUES.md  alembic.ini  cache.py  db.py  docker-entrypoint.sh  handler.py  main.py  middleware.py  models.py  pyproject.toml  security.py  settings.py  utils.py
back/alembic/: README  env.py
back/media/: initial.json
back/media/key/: ed25519-private.pem  ed25519-public.pem
back/media/templates/: activate_email.html  activate_success.html  change_password.html  code_email.html  login.html  register.html  reset.html  reset_email.html  reset_input.html  reset_sended.html  reset_success.html  signup_email.html  signup_success.html
back/src/: chat.py  deps.py  login.py  routers.py  user.py
deploy/: DOCKER_DEPLOY.md  docker-deploy.sh
web/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  jsconfig.json  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  main.js  style.scss
web/src/assets/: docs.json
web/src/components/admin/: admin-header.vue  columns.vue  draggable.vue  menutree.vue  page.vue  tabs.vue
web/src/components/admin/form/: f-columns-edit.vue  f-icon-panel.vue  f-input.vue  f-jsoneditor.vue  f-jsonview.vue
web/src/components/common/: bottom.vue  chart.vue  context.vue  mult-select.vue  select.vue  theme.vue
web/src/utils/: bus.js  chart.js  perm.js  request.js  router.js  store.js  tool.js
web/src/views/: 404.vue  chat.vue  index.vue  login.vue
web/src/views/admin/: index.vue
web/src/views/admin/system/: button.vue  chat.vue  dept.vue  file.vue  interface.vue  layout.vue  loginlog.vue  menu.vue  model.vue  profile.vue  role.vue  template.vue  user.vue
