[project]
name = "template"
version = "0.1.0"
description = "Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "asyncpg",
    "bcrypt",
    "email-validator",
    "fastapi",
    "Jinja2",
    "loguru",
    "Pillow",
    "asyncpg",
    "psycopg2-binary",
    "pydantic",
    "pydantic_settings",
    "PyJWT",
    "requests",
    "sqlalchemy[asyncio]",
    "sqlmodel",
    "uvicorn[standard]",
    "python-multipart",
    "httpx",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-community",
]



